--- a/assets/css/des_css.css
+++ b/assets/css/des_css.css
@@ -42,12 +42,16 @@ body {
     opacity: 0.9;
 }
 
+#content-area .content-item {
+    position: relative;
+}
+
 #content-area .content-item a {
     text-decoration: none;
     color: white;
-    position: relative;
-    bottom: 280px;
-    right: 150px;
+    position: absolute;
+    top: 1em;
+    left: 1em;
     padding: 10px;
     background-color: #1ec6b6;
     border-radius: 5px;
@@ -65,6 +69,48 @@ body {
 #content-area .content-item:hover img {
     opacity: 1;
     transform: scale(1.01);
+    -webkit-transition: all 400ms ease;
+    -moz-transition: all 400ms ease;
+    -ms-transition: all 400ms ease;
+    -o-transition: all 400ms ease;
+    transition: all 400ms ease;
+}
+
+#content-area .content-item .plan {
+    position: absolute;
+    bottom: 5em;
+    left: 0.2em;
+    border-radius: 5px;
+    width: 98%;
+    height: 50%;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+}
+
+.plan .plan-title {
+    font-family: "Nothing You Could Do", cursive;
+    font-size: 3em;
+    color: white;
+}
+
+.plan .plan-tour {
+    margin-top: 1em;
+    text-align: left;
+    color: white;
+    font-size: 1.1em;
+}
+
+.plan .plan-tour p {
+    margin: 1em 0;
+}
+
+.plan .plan-share {
+    display: inline-block;
+}
+
+#content-area .content-item:hover .plan {
+    opacity: 1;
     -webkit-transition: all 400ms ease;
     -moz-transition: all 400ms ease;
     -ms-transition: all 400ms ease;
