--- a/assets/css/single_blog.css
+++ b/assets/css/single_blog.css
@@ -25,6 +25,7 @@
 
 #slider .slider-item img {
     object-fit: cover;
+    cursor: pointer;
     width: 100%;
     height: 100%;
 }
@@ -174,8 +175,8 @@
 
 #content #slider-content .slider-content-text {
     position: absolute;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.6);
+    color: #333;
+    background-color: rgba(255, 255, 255, 0.6);
     bottom: 50%;
     left: 50%;
     padding: 15px;
@@ -183,7 +184,7 @@
     border-radius: 5px;
     font-family: "Nothing You Could Do", cursive;
     transform: translate(-50%, 50%);
-    opacity: 0;
+    opacity: 0.8;
     -webkit-transition: all 400ms ease;
     -moz-transition: all 400ms ease;
     -ms-transition: all 400ms ease;
@@ -192,6 +193,8 @@
 }
 
 #content #slider-content .slider-content-img:hover .slider-content-text {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.6);
     opacity: 1;
     cursor: pointer;
 }
