--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -66,7 +66,7 @@ body {
 
 #content_header>.nav {
     display: inline-block;
-    margin-right: 100px;
+    margin-right: 9%;
     position: relative;
 }
 
