--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -57,7 +57,6 @@ a {
 
 #content_header>.logo {
     display: inline-block;
-    /* float: left; */
     margin-left: -3px;
 
 }
@@ -70,7 +69,7 @@ a {
 
 #content_header>.nav {
     display: inline-block;
-    margin-right: 100px;
+    margin-right: 10%;
     position: relative;
 }
 
@@ -350,6 +349,8 @@ select {
 
 .popular-content .popular-item {
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .popular-item img {
@@ -392,7 +393,6 @@ select {
     border-radius: 7px;
     opacity: 0;
     color: rgba(255, 255, 255, 1);
-
 }
 
 .popular-content .popular-item:hover .detail {
