--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -341,7 +341,7 @@ select {
     text-align: center;
     padding: 20px;
     margin-top: 40px;
-    gap: 20px 1px;
+    gap: 40px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -355,8 +355,8 @@ select {
 
 .popular-item img {
     transition: all 0.5s ease-in-out;
-    width: 400px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     box-shadow: rgb(146, 48, 48);
     border-radius: 10px;
     overflow: hidden;
