--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -73,6 +73,38 @@ a {
     position: relative;
 }
 
+@media screen and (min-width: 1367px) {
+    #content_header>.nav {
+        margin-right: 20%;
+        margin-left: 10%;
+    }
+
+    #content_header>.logo {
+
+        margin-left: 5%;
+
+    }
+}
+
+@media screen and (max-width:1366) {
+    #content_header>.nav {
+        margin-right: 9%;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    #content_header>.nav {
+        margin-right: 5%;
+        margin-left: 5%;
+    }
+
+    #content_header>.logo {
+
+        margin-left: 2%;
+
+    }
+}
+
 #content_header .nav .sub_nav {
     display: none;
     width: 180px;
@@ -425,7 +457,7 @@ select {
 }
 
 #video {
-    margin-top: 100px;
+    margin-top: 10%;
     width: 100%;
     height: 759px;
     background-image: url(../img/back_gr_video.jpg);
@@ -434,6 +466,12 @@ select {
     align-items: center;
     margin-bottom: 50px;
 
+}
+
+@media screen and (min-width: 1377px) {
+    #video {
+        margin-top: 20%;
+    }
 }
 
 #video>.video-content {
