--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -9,16 +9,18 @@ body {
         sans-serif;
 }
 
-
 body::-webkit-scrollbar {
     width: 10px;
 }
 
-body::-webkit-scrollbar-thumb {
-    background-image: linear-gradient(-45deg, #1EC6B6, #fff);
-    border-radius: 0 0 50px 50px;
+body::-webkit-scrollbar-track {
+    background-color: #fafafa;
 }
 
+body::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(-45deg, #1EC6B6, #EAEAEA);
+    border-radius: 50px;
+}
 
 #header {
     height: 80px;
@@ -100,7 +102,7 @@ body::-webkit-scrollbar-thumb {
 
 @media screen and (min-width: 1500px) {
     #content_header>.nav {
-        margin-right: 5%;
+        margin-right: 15%;
         margin-left: 5%;
     }
 
