--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,6 +20,19 @@ a {
     position: relative;
 }
 
+body::-webkit-scrollbar {
+    width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #fafafa;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(-45deg, #1EC6B6, #EAEAEA);
+    border-radius: 50px;
+}
+
 :root {
     --font-text: font-family: -apple-system,
         system-ui,
@@ -73,7 +86,7 @@ a {
     position: relative;
 }
 
-@media screen and (min-width: 1367px) {
+@media screen and (min-width: 1800px) {
     #content_header>.nav {
         margin-right: 20%;
         margin-left: 10%;
@@ -86,15 +99,10 @@ a {
     }
 }
 
-@media screen and (max-width:1366) {
-    #content_header>.nav {
-        margin-right: 9%;
-    }
-}
 
 @media screen and (min-width: 1500px) {
     #content_header>.nav {
-        margin-right: 5%;
+        margin-right: 10%;
         margin-left: 5%;
     }
 
@@ -102,6 +110,13 @@ a {
 
         margin-left: 2%;
 
+    }
+}
+
+@media screen and (min-width:1700px) {
+    #content_header>.nav {
+        margin-right: 18%;
+        margin-left: 5%;
     }
 }
 
@@ -456,6 +471,47 @@ select {
     grid-column-end: 3;
 }
 
+.book-now {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.book {
+
+    align-items: center;
+    background-color: #1EC6B6;
+    border: 2px solid #111;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #111;
+    cursor: pointer;
+    font-family: "Rubik",
+        sans-serif;
+    font-size: 16px;
+    height: 48px;
+
+    line-height: 24px;
+    max-width: 100%;
+    padding: 0 25px;
+    position: relative;
+
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.book:hover {
+    color: #EAEAEA;
+    background-color: #FF4A52;
+    -webkit-transition: all 400ms ease;
+    -moz-transition: all 400ms ease;
+    -ms-transition: all 400ms ease;
+    -o-transition: all 400ms ease;
+    transition: all 400ms ease;
+}
+
 #video {
     margin-top: 10%;
     width: 100%;
@@ -470,8 +526,22 @@ select {
 
 @media screen and (min-width: 1377px) {
     #video {
-        margin-top: 20%;
+        margin-top: 12%;
     }
+}
+
+@media screen and (min-width: 1700px) {
+    #video {
+        margin-top: 15%;
+    }
+
+}
+
+@media screen and (min-width: 1800px) {
+    #video {
+        margin-top: 18%;
+    }
+
 }
 
 #video>.video-content {
