--- a/assets/css/single_blog.css
+++ b/assets/css/single_blog.css
@@ -207,8 +207,8 @@
 }
 
 #content #news-content img {
-    width: 810x;
-    height: 540px;
+    width: 100%;
+    height: 50%;
     border-radius: 5px;
 
 }
@@ -456,6 +456,16 @@ p {
     #content #news-content {
         width: 50%;
 
+    }
+}
+
+@media screen and (min-width: 1700px) {
+    #feature-post {
+        margin-left: 20%;
+    }
+
+    #tour-news {
+        margin: 0 8%;
     }
 }
 
