--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -211,7 +211,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .contact .loginBtn {
-    
+
     border-radius: 44px;
     box-shadow: 1px 1px 3px #00000052;
     padding: 10px 20px;
@@ -266,14 +266,13 @@ body::-webkit-scrollbar-thumb {
 #header #content_header .search-icon .search {
     color: #f5d9d9;
 }
-<<<<<<< HEAD
+
 
 .search-input {
     display: none;
 }
 
-=======
->>>>>>> 87443657f07a92d7dcccb6c811dc53edf7ff5a3c
+
 #footer {
     margin-top: 45px;
     /* height: 450px; */
@@ -386,7 +385,7 @@ body::-webkit-scrollbar-thumb {
     justify-content: center;
 }
 
-#login > div {
+#login>div {
     position: relative;
     z-index: 1;
 }
@@ -402,7 +401,9 @@ body::-webkit-scrollbar-thumb {
     box-shadow: 1px 1px 8px rgb(0 0 0 / 31%);
     /* transition: all 0.5s ease; */
 }
-#login::before, #signup::before {
+
+#login::before,
+#signup::before {
     content: "";
     position: absolute;
     /* z-index: ; */
@@ -423,16 +424,16 @@ body::-webkit-scrollbar-thumb {
     margin: 40px 0 30px 0;
 }
 
-<<<<<<< HEAD
+
 #login .headline h2 {
     background: linear-gradient(to right, #eee, #333);
 
     -webkit-text-fill-color: transparent;
 }
 
-#login .form>div {
-=======
-#login .headline h2{
+#login .form>div {}
+
+#login .headline h2 {
     font-size: 42px;
     background: linear-gradient(to right, #ffffff, rgb(0 0 0));
     text-shadow: -3px -2px 0px #00c961;
@@ -444,8 +445,8 @@ body::-webkit-scrollbar-thumb {
     padding-top: 7px;
 }
 
-#login .form>div{
->>>>>>> 87443657f07a92d7dcccb6c811dc53edf7ff5a3c
+#login .form>div {
+
     display: flex;
     flex-direction: column;
     margin: 0 45px 15px 45px;
@@ -496,7 +497,7 @@ body::-webkit-scrollbar-thumb {
     margin-top: 10px;
 }
 
-#login .create a{
+#login .create a {
     color: blue;
 }
 
@@ -510,12 +511,12 @@ body::-webkit-scrollbar-thumb {
     transform: scale(1.1);
 }
 
-.forgotPassword > a {
+.forgotPassword>a {
     color: blue;
     transition: color 400ms ease;
 }
 
-.forgotPassword > a:hover {
+.forgotPassword>a:hover {
     color: red;
 }
 
@@ -545,7 +546,7 @@ body::-webkit-scrollbar-thumb {
     color: rgb(29, 155, 240);
 }
 
-<<<<<<< HEAD
+
 .container-form {
     /* transform: translate(-50%, -50%); */
     position: fixed;
@@ -567,12 +568,15 @@ body::-webkit-scrollbar-thumb {
     height: 70%;
     width: 50%;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 1em;
     background-image: url(../img/backgr_book_now.jpg);
     background-size: cover;
+    background-position: left;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #FF4A52;
+    box-shadow: 5px #333;
 }
 
 .book-form>.title {
@@ -599,7 +603,7 @@ body::-webkit-scrollbar-thumb {
 .form .form-input,
 .form .people-input {
     font-size: 1em;
-    border-radius: 5px;
+    border-radius: 0.7em;
     display: flex;
     height: 2em;
     width: 21.9em;
@@ -607,6 +611,7 @@ body::-webkit-scrollbar-thumb {
 
 .form-left {
     font-size: 25px;
+    color: #040E27;
 }
 
 .confirm {
@@ -657,7 +662,8 @@ body::-webkit-scrollbar-thumb {
 .form .people-input {
     width: 10em;
     height: 2em;
-=======
+}
+
 #signup {
     position: absolute !important;
     top: 0;
@@ -676,5 +682,5 @@ body::-webkit-scrollbar-thumb {
 
 #signup button {
     margin-top: 5px;
->>>>>>> 87443657f07a92d7dcccb6c811dc53edf7ff5a3c
+
 }
