--- a/assets/css/single_blog.css
+++ b/assets/css/single_blog.css
@@ -180,7 +180,7 @@
     bottom: 50%;
     left: 50%;
     padding: 15px;
-    font-size: 44px;
+    font-size: 3.5em;
     border-radius: 5px;
     font-family: "Nothing You Could Do", cursive;
     transform: translate(-50%, 50%);
