--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -555,7 +555,6 @@ body::-webkit-scrollbar-thumb {
     right: 0;
     left: 0;
     z-index: 10000;
-    color: black;
     background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     justify-content: center;
@@ -664,6 +663,15 @@ body::-webkit-scrollbar-thumb {
 .form .people-input {
     width: 10em;
     height: 2em;
+}
+
+#total_number {
+    width: 10em;
+    height: 2em;
+    font-size: 1em;
+    border-radius: 0.7em;
+
+
 }
 
 #signup {
