--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -267,6 +267,14 @@ body::-webkit-scrollbar-thumb {
     color: #f5d9d9;
 }
 
+#nav-icon a{
+    color: black;
+    font-size:24px;
+    display: none;
+}
+
+
+
 
 .search-input {
     display: none;
@@ -588,7 +596,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .form div {
-    margin: 15px;
+    margin: 2px;
     text-align: left;
 }
 
@@ -670,8 +678,6 @@ body::-webkit-scrollbar-thumb {
     height: 2em;
     font-size: 1em;
     border-radius: 0.7em;
-
-
 }
 
 #signup {
@@ -693,4 +699,66 @@ body::-webkit-scrollbar-thumb {
 #signup button {
     margin-top: 5px;
 
+}
+
+/* Tablet width 820 */
+@media screen and (max-width: 820px) {
+    .logo img {
+        width: 190px;   
+    }
+    #header #content_header {
+        width: 100vw
+    }
+    #content_header>.nav {
+        font-size: 14px;
+        margin-right: 10px;
+    }
+    #content_header .nav li {
+        padding: 10px;
+    }
+    .contact span {
+        display: none;
+    }
+    #header #content_header .search-icon a {
+        top: 20px;
+        right: 118px;
+        /* font-size: 14px; */
+    }
+    #header #content_header .search-icon input {
+        opacity: 1;
+        right: 2px;
+        width: 161px;
+        
+    padding: 14px 0 14px 52px;
+
+        font-size: 11px;
+    }
+    .contact .loginBtn {
+        font-size: 14px;
+    }
+/* Footer */
+    .contact-insta-item {
+        display: none !important;
+    }
+
+    #footer {
+        height: 0; 
+        padding: 130px 0;
+        font-size: 14px;
+    }
+
+    #footer>.contact-item {
+        margin: 0;
+    }
+
+    #footer .contact-img img {
+        height: auto;
+        width: 240px;
+        margin: 0;
+    }   
+    #footer>.contact-popular li {
+        margin: 0;
+    }
+
+    
 }
