--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -707,7 +707,11 @@ body::-webkit-scrollbar-thumb {
 }
 
 /* Tablet width 820 */
-@media screen and (max-width: 820px) {
+@media screen and (max-width:64em) and (min-width: 46.25em) {
+    #slider {
+        height: 31.25em;
+    }
+
     .logo img {
         width: 190px;
     }
@@ -718,7 +722,7 @@ body::-webkit-scrollbar-thumb {
 
     #content_header>.nav {
         font-size: 14px;
-        margin-right: 10px;
+        margin-right: 1%;
     }
 
     #content_header .nav li {
@@ -729,16 +733,32 @@ body::-webkit-scrollbar-thumb {
         display: none;
     }
 
+    .contact a {
+        padding: 5px;
+    }
+
+    #search-id {
+        width: 140px;
+    }
+
     #header #content_header .search-icon a {
         top: 20px;
-        right: 118px;
+        right: 105px;
         /* font-size: 14px; */
+    }
+
+    #search-id {
+        opacity: 1 !important;
+    }
+
+    #sear {
+        transform: none !important;
     }
 
     #header #content_header .search-icon input {
         opacity: 1;
-        right: 2px;
-        width: 161px;
+        right: 11px;
+        width: 140px;
 
         padding: 14px 0 14px 52px;
 
@@ -747,6 +767,16 @@ body::-webkit-scrollbar-thumb {
 
     .contact .loginBtn {
         font-size: 14px;
+    }
+
+    #where-togo input,
+    select {
+        margin: 0 0.5%;
+        font-size: 90%;
+    }
+
+    #where-togo h3 {
+        margin-right: 0.5%;
     }
 
     /* Footer */
