--- a/assets/css/single_blog.css
+++ b/assets/css/single_blog.css
@@ -552,3 +552,94 @@ p {
     -o-transition: all 400ms ease;
     transition: all 400ms ease;
 }
+
+/* tablet */
+@media screen and (max-width:64em) and (min-width: 46.25em) {
+    #slider {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 20em 20em 20em 20em;
+
+        grid-template-areas: "h1 h1 "
+            "h1 h1 "
+            "h2 h3"
+            "h4 h3"
+    }
+
+    .slider-item.fade {
+        width: 100%;
+    }
+
+    .slider-item .slider-text .content span {
+        bottom: 5.5em;
+        left: 6em;
+    }
+
+    .slider-item .slider-text .content h4 {
+        bottom: 2em;
+        left: 4em;
+        width: 70%;
+    }
+
+    #content #slider-content {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 20em 20em;
+        margin: 1em;
+    }
+
+    #content #slider-content .slider-content-img {
+        text-align: center;
+    }
+
+    #content #slider-content .slider-content-img img {
+        width: 100%;
+        height: 100%;
+    }
+
+    #content #slider-content .slider-content-img:hover img {
+        transform: none;
+    }
+
+    #content #slider-content .slider-content-text {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+
+    #content #news-content .news-content-text h3 {
+        font-size: 1.5em;
+    }
+
+    #content #news-content .news-content-text {
+        width: 100%;
+    }
+
+    #content #about-me button,
+    #content .news-content-text button {
+        min-height: 50px;
+        padding: 1em;
+    }
+
+    #tour-news .tour-news-item h3,
+    p {
+        font-size: 0.9em;
+    }
+
+    #content #about-me .about-me-icon li {
+        padding: 0.5em 0.8em;
+    }
+
+    #content #about-me {
+        width: 29%;
+    }
+
+    #feature-post {
+        display: none;
+    }
+
+    .tour-news-item {
+        text-align: center;
+    }
+
+    .contact-insta-item {
+        display: none !important;
+    }
+}
