--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,30 +1,4 @@
-@keyframes borderinput1 {
-    50% {
-        width: 492px;
-        height: 35px;
-        margin: 9px 0;
-    }
 
-    100% {
-        width: 490px;
-        height: 33px;
-        margin: 10px 0;
-    }
-}
-
-@keyframes borderinput2 {
-    50% {
-        width: 492px;
-        height: 152px;
-        margin: 9px 0;
-    }
-
-    100% {
-        width: 490px;
-        height: 150px;
-        margin: 10px 0;
-    }
-}
 
 .banner h3 {
     font-family: "Nothing You Could Do", sans-serif;
@@ -79,7 +53,7 @@
     /* z-index: -1; */
     position: relative;
     background-size: cover;
-    background-position: 50% 50%;
+    background-position: 50% 83%;
     color: rgb(255, 255, 255);
     padding-bottom: 60px;
 }
@@ -98,6 +72,7 @@
 .content2 .container .column {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .content2 .data2 {
@@ -146,7 +121,7 @@
 }
 
 .content2 .data3 input {
-    width: 490px;
+    width: 90%;
     background-color: transparent;
     height: 33px;
     margin: 10px 0;
@@ -159,15 +134,13 @@
 
 .content2 .data3 input:focus {
     background-color: #ffffff24;
-    animation-name: borderinput1;
-    animation-duration: 0.5s;
+    transform: scaleX(1.01);
 }
 
 .content2 .data3 textarea:focus {
     /* box-sizing: border-box; */
     background-color: #ffffff24;
-    animation-name: borderinput2;
-    animation-duration: 0.5s;
+    transform: scaleX(1.01);
 }
 
 .content2 .data3 input::placeholder {
@@ -175,7 +148,7 @@
 }
 
 .content2 .data3 textarea {
-    width: 490px;
+    width: 90%;
     height: 150px;
     background-color: transparent;
     margin: 10px 0;
@@ -240,9 +213,23 @@
 
 
 /* Tablet width 820*/
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1150px) {
     .content1 {
         background-repeat: no-repeat;
         background-size: 130%;
+    }
+    .banner h3 {
+        font-size: 80px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .content1 .map {
+        margin: 0;
+        width: 100%;
+        height: 30%;
+    }
+    .content1 .map iframe {
+        width: 100%;
     }
 }
