--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -550,7 +550,7 @@ select {
 }
 
 /* Tablet 820px = 51.25e, */
-@media screen and (max-width : 51.25em) {
+@media screen and (max-width:64em) and (min-width: 46.25em) {
     .text {
         bottom: 1.625em;
         font-size: 6.25em;
@@ -567,7 +567,7 @@ select {
 
     #where-togo input,
     select {
-        font-size: 1em;
+        font-size: 0.8em;
         margin: 0 0.5em;
     }
 
@@ -628,5 +628,87 @@ select {
     #footer>.contact-img img {
         height: 250px;
         width: 250px;
+    }
+}
+
+/* mobile */
+@media screen and (max-width: 46.1875em) {
+    #content_header>.nav {
+        display: none;
+    }
+
+    #where-togo h3 {
+        margin-right: 0;
+        margin-bottom: 0.5em;
+        font-size: 1em;
+    }
+
+    .search-btn {
+        display: block;
+    }
+
+    #where-togo input,
+    select {
+        margin: 0.5em 0;
+        width: 90%;
+        font-size: 1em;
+    }
+
+    .search-btn .btn {
+        font-size: 1em;
+        ;
+        margin-left: 0;
+        margin-top: 0.5em;
+    }
+
+    #popular {
+        padding: 10% 0;
+    }
+
+    .title {
+        font-size: 3em;
+    }
+
+    .sub-title {
+        font-size: 1em;
+    }
+
+    .popular-content {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        gap: 1em 0;
+        margin-top: 0;
+    }
+
+    .popular-item .detail {
+        display: none;
+    }
+
+    #video {
+        margin-top: 30%;
+        height: 20em;
+    }
+
+    #video>.video-content a {
+        font-size: 3em;
+    }
+
+    #icon h3 {
+        font-size: 1em;
+    }
+
+    #icon span {
+        font-size: 0.9em;
+    }
+
+    #header #content_header .search-icon input {
+        opacity: 1 !important;
+    }
+
+    .popular-content {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        gap: 1em 0;
+        margin-top: 0;
     }
 }
