--- a/assets/css/aboutcss.css
+++ b/assets/css/aboutcss.css
@@ -1,7 +1,15 @@
 @keyframes imgtable {
-    0% {transform: scale(1.0)}
-    50% {transform: scale(1.02);}
-    100% {transform: scale(1.0);}
+    0% {
+        transform: scale(1.0)
+    }
+
+    50% {
+        transform: scale(1.02);
+    }
+
+    100% {
+        transform: scale(1.0);
+    }
 }
 
 
@@ -28,7 +36,7 @@
 }
 
 .banner .title h1 {
-    font-family: "Nothing You Could Do",sans-serif;
+    font-family: "Nothing You Could Do", sans-serif;
     font-size: 150px;
     text-transform: capitalize;
     font-weight: 400;
@@ -62,12 +70,12 @@
     object-fit: cover;
     object-position: 50% 50%;
     border-radius: 10px;
-    animation:  imgtable 4000ms linear infinite;
+    animation: imgtable 4000ms linear infinite;
     box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 28%);
 }
 
 .img-table img:hover {
-    outline: 2px solid #1ec6b6 ;
+    outline: 2px solid #1ec6b6;
     cursor: pointer;
 }
 
@@ -88,7 +96,7 @@
     border-radius: none;
     border: none;
     height: 680px;
-    
+
 }
 
 .content1 div {
@@ -114,7 +122,10 @@
     z-index: -1;
 }
 
-.content1 .img2:hover, .content1 .img3:hover, .content1 .img5:hover, .content1 .img4:hover {
+.content1 .img2:hover,
+.content1 .img3:hover,
+.content1 .img5:hover,
+.content1 .img4:hover {
     border: 10px solid #1ec6b6;
     z-index: 10;
 }
@@ -176,12 +187,12 @@
 
 .out-story-container .paragraph p {
     font-size: 20px;
-    font-weight:100;
+    font-weight: 100;
 }
 
 
 
-.out-story-container .container-img img{
+.out-story-container .container-img img {
     width: calc(50% - 20px);
     height: 100%;
     object-fit: cover;
@@ -196,8 +207,9 @@
 
 .out-story-container .container-img .img2 {
     object-position: 50% 100%;
-    
+
 }
+
 .out-story-container .container-img .img1 {
     object-position: 50% 10%;
     margin-right: 20px;
@@ -221,7 +233,7 @@
 
 .out-story-container .counter {
     margin-top: 10px;
-    /*display: flex;*/
+    display: flex;
     justify-content: space-around;
 }
 
@@ -292,14 +304,17 @@
         opacity: 0;
         transform: translateX(-100px);
     }
+
     12% {
         opacity: 0.9;
         transform: translateX(0px);
     }
+
     88% {
         opacity: 0.9;
         transform: translateX(600px);
     }
+
     100% {
         opacity: 0;
         transform: translateX(700px);
