--- a/assets/css/single_blog.css
+++ b/assets/css/single_blog.css
@@ -200,7 +200,7 @@
 }
 
 #content #news-content {
-    margin: 40px;
+    margin: 1.5em;
     display: inline-block;
     position: relative;
     width: 60%;
