--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -555,130 +555,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-.container-form {
-    /* transform: translate(-50%, -50%); */
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 10000;
-    background-color: rgba(0, 0, 0, 0.6);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.book-form {
-    position: relative;
-    font-size: 20px;
-    height: 80%;
-    width: 50%;
-    padding: 20px;
-    border-radius: 1em;
-    background-image: url(../img/phuquoc-popular.jpg);
-    background-size: cover;
-    background-position: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fa303a;
-    text-shadow: -1px -1px 0px #333;
-    box-shadow: 5px #333;
-}
-
-.book-form>.title {
-    text-align: center;
-    font-family: "Nothing You Could Do", cursive;
-    font-size: 80px;
-    font-weight: 400;
-    text-shadow: -3px -2px 0px #333;
-}
-
-.form div {
-    margin: 2px;
-    text-align: left;
-}
-
-.form span {
-    margin: 10px 15px;
-}
-
-.form-input {
-    margin: 5px 15px;
-    border: 1px solid #040E27;
-}
-
-.form .form-input,
-.form .people-input {
-    font-size: 1em;
-    border-radius: 0.7em;
-    display: flex;
-    height: 2em;
-    width: 21.9em;
-}
-
-.form-left {
-    font-size: 27px;
-    color: #333;
-}
-
-.confirm {
-    position: absolute;
-    bottom: 0;
-    transform: translate(-50%, -50%);
-    appearance: button;
-    background-color: #1899D6;
-    border: solid transparent;
-    border-radius: 16px;
-    border-width: 0 0 4px;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: 700;
-    letter-spacing: .8px;
-    line-height: 20px;
-    margin: 0;
-    outline: none;
-    overflow: visible;
-    padding: 13px 16px;
-    text-align: center;
-    text-transform: uppercase;
-    touch-action: manipulation;
-    /* transform: translateZ(0); */
-    transition: filter .2s;
-    user-select: none;
-    -webkit-user-select: none;
-    vertical-align: middle;
-    white-space: nowrap;
-    width: 40%;
-}
-
-.confirm:hover {
-    -webkit-filter: brightness(1.1);
-}
-
-.parent {
-    display: inline-block;
-}
-
-.child {
-    display: inline-block;
-}
-
-.form .people-input {
-    width: 10em;
-    height: 2em;
-}
-
-#total_number {
-    width: 10em;
-    height: 2em;
-    font-size: 1em;
-    border-radius: 0.7em;
-}
 
 #signup {
     position: absolute !important;
@@ -699,6 +575,105 @@ body::-webkit-scrollbar-thumb {
 #signup button {
     margin-top: 5px;
 
+}
+
+.cover-book-form {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 100000;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+#book-form {
+    position: fixed;
+    width: 90%;
+    height: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+#content-form {
+    width: 50%;
+    height: 100%;
+    float: left;
+    background-image: url(../img/phuquoc-popular.jpg);
+    background-size: cover;
+    border-radius: 20px;
+}
+
+#input-form {
+    width: 50%;
+    height: 100%;
+    float: left;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 20px;
+}
+
+#input-form h3 {
+    font-size: 3em;
+    font-family: "Rubik",
+        sans-serif;
+}
+
+#input-form span {
+    font-family: "Rubik",
+        sans-serif;
+    font-size: 1em;
+    padding: 1em 0;
+    margin: 0 1em;
+}
+
+#input-form input {
+    font-size: 1em;
+    width: 70%;
+    height: 2em;
+    display: block;
+    margin-bottom: 0.9em;
+    margin-top: 0.2em;
+    margin-left: 1em;
+}
+
+form {
+    background-color: aliceblue;
+    width: 65%;
+    height: 90%;
+    border: 1px solid #ccc;
+    display: block;
+    margin: 0 3em;
+    box-shadow: 5px 5px #888888;
+    position: relative;
+}
+
+.confirm {
+    display: block;
+    width: 100%;
+    height: 3em;
+    background-color: #1ec6b6;
+    box-shadow: 5px 5px #888888;
+    position: absolute;
+    bottom: 0;
+
+}
+
+.confirm:hover {
+    cursor: pointer;
+    box-shadow: 0 0;
+    opacity: 0.9;
+}
+
+.title-form {
+    width: 100%;
+    margin-top: 2em;
+    text-align: center;
 }
 
 @media screen and (max-width: 1220px) {
