--- a/assets/css/aboutcss.css
+++ b/assets/css/aboutcss.css
@@ -1,15 +1,7 @@
 @keyframes imgtable {
-    0% {
-        transform: scale(1.0)
-    }
-
-    50% {
-        transform: scale(1.02);
-    }
-
-    100% {
-        transform: scale(1.0);
-    }
+    0% {transform: scale(1.0)}
+    50% {transform: scale(1.02);}
+    100% {transform: scale(1.0);}
 }
 
 
@@ -36,7 +28,7 @@
 }
 
 .banner .title h1 {
-    font-family: "Nothing You Could Do", sans-serif;
+    font-family: "Nothing You Could Do",sans-serif;
     font-size: 150px;
     text-transform: capitalize;
     font-weight: 400;
@@ -70,12 +62,12 @@
     object-fit: cover;
     object-position: 50% 50%;
     border-radius: 10px;
-    animation: imgtable 4000ms linear infinite;
+    animation:  imgtable 4000ms linear infinite;
     box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 28%);
 }
 
 .img-table img:hover {
-    outline: 2px solid #1ec6b6;
+    outline: 2px solid #1ec6b6 ;
     cursor: pointer;
 }
 
@@ -96,7 +88,7 @@
     border-radius: none;
     border: none;
     height: 680px;
-
+    
 }
 
 .content1 div {
@@ -122,10 +114,7 @@
     z-index: -1;
 }
 
-.content1 .img2:hover,
-.content1 .img3:hover,
-.content1 .img5:hover,
-.content1 .img4:hover {
+.content1 .img2:hover, .content1 .img3:hover, .content1 .img5:hover, .content1 .img4:hover {
     border: 10px solid #1ec6b6;
     z-index: 10;
 }
@@ -187,12 +176,12 @@
 
 .out-story-container .paragraph p {
     font-size: 20px;
-    font-weight: 100;
+    font-weight:100;
 }
 
 
 
-.out-story-container .container-img img {
+.out-story-container .container-img img{
     width: calc(50% - 20px);
     height: 100%;
     object-fit: cover;
@@ -207,9 +196,8 @@
 
 .out-story-container .container-img .img2 {
     object-position: 50% 100%;
-
+    
 }
-
 .out-story-container .container-img .img1 {
     object-position: 50% 10%;
     margin-right: 20px;
@@ -263,7 +251,7 @@
 }
 
 .content3 .img-container {
-    width: 1140px;
+    /* width: 1140px; */
     position: relative;
     margin: 0 auto;
     /* z-index: -1; */
@@ -277,7 +265,7 @@
 .content3 .img-container .img1 {
     width: 72%;
     object-position: 50% 0%;
-    height: 691px;
+    /* height: 691px; */
     position: relative;
     margin: 0 9%;
 }
@@ -304,17 +292,14 @@
         opacity: 0;
         transform: translateX(-100px);
     }
-
     12% {
         opacity: 0.9;
         transform: translateX(0px);
     }
-
     88% {
         opacity: 0.9;
         transform: translateX(600px);
     }
-
     100% {
         opacity: 0;
         transform: translateX(700px);
@@ -322,11 +307,15 @@
 }
 
 .content3 .container {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+    /* position: relative;
     width: 668px;
     min-height: 499px;
     height: auto;
-    margin: -585px auto 112px 236px;
+    margin: -585px auto 112px 236px; */
     display: flex;
     justify-content: center;
     text-align: center;
@@ -503,4 +492,136 @@
     border-radius: 5px;
     width: 75px;
     height: 75px;
+}
+
+@media screen and (max-width: 1200px) {
+    .content1 .img2 {
+        width: 400px;
+        height: 400px;
+    }
+    .content1 .img3 {
+        width: 230px;
+        height: 230px;
+    }
+    .content1 .img5 {
+        width: 150px;
+        height: 150px;
+    }
+    .content1 .img-container {
+        height: 500px;
+    }
+    .out-story-container .counter div{
+        width: 258px;
+        display: flex;
+        flex-direction: column;
+
+    }
+    .content1 .paragraph {
+        width: 65%;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .banner .title h1 {
+        font-size: 84px;
+    }
+    .img-table div {
+        width: 100%;
+    }
+
+    .content1 .img1 {
+        width: 60px;
+        height: 60px;
+    }
+    .content1 .img2 {
+        width: 200px;
+        height: 200px;
+    }
+    .content1 .img3 {
+        width: 100px;
+        height: 100px;
+    }
+    .content1 .img-container {
+        height: 330px;
+    }
+    .content1 .paragraph {
+        margin-left: 0;
+        width: 100%;
+    }
+    .content1 .paragraph p {
+        font-size:13px;
+    }
+    .out-story-container>div:first-child {
+        margin: 67px -10px;
+    }
+    .out-story-container .paragraph p {
+        font-size: 14px;
+    }
+    .out-story-container .container-img img {
+        width: 48%;
+        height: 200px;
+        
+    }
+    .out-story-container .container-img {
+        width: 100%;
+        height: 200px;
+    }
+    .out-story-container .container-img .img1 {
+        margin-right:5px;
+    }
+    .out-story-container .counter h3 {
+        font-size:40px;
+    }
+    .out-story-container .counter p {
+        font-size:16px;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .banner .title h1 {
+        font-size:56px;
+    }
+    .banner .title p {
+        font-size: 16px;
+    }
+    .banner-container {
+        width: auto;
+    }
+    .content1 .img5 {
+        margin-top: -100px;
+        margin-left: 40%;
+    }
+    .content1 .img4 {
+        display: none;
+    }
+    .out-story-container .counter div {
+        margin-left: 0;
+    }
+    .content3 .container h1 {
+        font-size:16px;
+    }
+    .content3 .container h3 {
+        font-size: 12px;
+    }
+
+    .content3 .img-container .img3 {
+        width: 100px;
+    }
+    .content3 .container {
+        transform: translate(-50%, -50%);
+        color: #000;
+    }
+    .content3 .container a {
+        padding: 5px 10px;
+        font-size: 12px;
+    }
+    .content4 .row .icon img {
+        width: 50px;
+    }
+    .content4 .row h2 {
+        font-size: 20px;
+    }
+    .content4 .row p {
+        font-size: 12px;
+    }
 }
