--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -15,6 +15,7 @@ a {
 }
 
 
+
 #header {
     height: 80px;
     position: relative;
@@ -178,6 +179,14 @@ body::-webkit-scrollbar-thumb {
     content: '';
 } */
 
+#nav-icon {
+    display: none;
+}
+
+#nav-bar {
+    display: none;
+}
+
 #content_header .nav li {
     padding: 24px;
     display: inline-block;
@@ -267,9 +276,9 @@ body::-webkit-scrollbar-thumb {
     color: #f5d9d9;
 }
 
-#nav-icon a {
+#nav-icon a{
     color: black;
-    font-size: 24px;
+    font-size:24px;
     display: none;
 }
 
@@ -282,9 +291,9 @@ body::-webkit-scrollbar-thumb {
 
 
 #footer {
-    margin-top: 45px;
+    /* margin-top: 45px; */
     /* height: 450px; */
-    padding: 120px 0;
+    padding: 20px 0;
     background-color: #040E27;
     display: flex;
     justify-content: center;
@@ -555,6 +564,130 @@ body::-webkit-scrollbar-thumb {
 }
 
 
+.container-form {
+    /* transform: translate(-50%, -50%); */
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 10000;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.book-form {
+    position: relative;
+    font-size: 20px;
+    height: 80%;
+    width: 50%;
+    padding: 20px;
+    border-radius: 1em;
+    background-image: url(../img/phuquoc-popular.jpg);
+    background-size: cover;
+    background-position: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fa303a;
+    text-shadow: -1px -1px 0px #333;
+    box-shadow: 5px #333;
+}
+
+.book-form>.title {
+    text-align: center;
+    font-family: "Nothing You Could Do", cursive;
+    font-size: 80px;
+    font-weight: 400;
+    text-shadow: -3px -2px 0px #333;
+}
+
+.form div {
+    margin: 2px;
+    text-align: left;
+}
+
+.form span {
+    margin: 10px 15px;
+}
+
+.form-input {
+    margin: 5px 15px;
+    border: 1px solid #040E27;
+}
+
+.form .form-input,
+.form .people-input {
+    font-size: 1em;
+    border-radius: 0.7em;
+    display: flex;
+    height: 2em;
+    width: 21.9em;
+}
+
+.form-left {
+    font-size: 27px;
+    color: #333;
+}
+
+.confirm {
+    position: absolute;
+    bottom: 0;
+    transform: translate(-50%, -50%);
+    appearance: button;
+    background-color: #1899D6;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: .8px;
+    line-height: 20px;
+    margin: 0;
+    outline: none;
+    overflow: visible;
+    padding: 13px 16px;
+    text-align: center;
+    text-transform: uppercase;
+    touch-action: manipulation;
+    /* transform: translateZ(0); */
+    transition: filter .2s;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+    width: 40%;
+}
+
+.confirm:hover {
+    -webkit-filter: brightness(1.1);
+}
+
+.parent {
+    display: inline-block;
+}
+
+.child {
+    display: inline-block;
+}
+
+.form .people-input {
+    width: 10em;
+    height: 2em;
+}
+
+#total_number {
+    width: 10em;
+    height: 2em;
+    font-size: 1em;
+    border-radius: 0.7em;
+}
 
 #signup {
     position: absolute !important;
@@ -577,110 +710,6 @@ body::-webkit-scrollbar-thumb {
 
 }
 
-.cover-book-form {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 100000;
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-#book-form {
-    position: fixed;
-    width: 90%;
-    height: 90%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-}
-
-#content-form {
-    width: 50%;
-    height: 100%;
-    float: left;
-    background-image: url(../img/phuquoc-popular.jpg);
-    background-size: cover;
-    border-radius: 20px;
-}
-
-#input-form {
-    width: 50%;
-    height: 100%;
-    float: left;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    border-radius: 20px;
-}
-
-#input-form h3 {
-    font-size: 4em;
-    font-family: "Rubik",
-        sans-serif;
-    position: relative;
-    bottom: 0.3em;
-
-}
-
-#input-form span {
-    font-family: "Rubik",
-        sans-serif;
-    font-size: 1em;
-    padding: 1em 0;
-    margin: 0 1em;
-}
-
-#input-form input {
-    font-size: 1em;
-    width: 90%;
-    height: 2em;
-    display: block;
-    margin-bottom: 0.5em;
-    margin-top: 0.2em;
-    margin-left: 1em;
-}
-
-form {
-    background-color: aliceblue;
-    width: 70%;
-    height: 95%;
-    border: 1px solid #ccc;
-    display: block;
-    margin: 0 3em;
-    box-shadow: 5px 5px #888888;
-    position: relative;
-}
-
-.confirm {
-    display: block;
-    width: 100%;
-    height: 3em;
-    background-color: #1ec6b6;
-    box-shadow: 5px 5px #888888;
-    position: absolute;
-    bottom: 0;
-
-}
-
-.confirm:hover {
-    cursor: pointer;
-    box-shadow: 0 0;
-    opacity: 0.9;
-}
-
-.title-form {
-    width: 100%;
-    margin-top: 2em;
-    text-align: center;
-}
-
-
-
 @media screen and (max-width: 1220px) {
     #content_header>.nav {
         margin-right: 50px;
@@ -691,55 +720,47 @@ form {
 /* Tablet width 820 */
 @media screen and (max-width: 1150px) {
     .logo img {
-        width: 190px;
+        width: 190px;   
     }
-
     #header #content_header {
         width: 100vw
     }
-
     #content_header>.nav {
         font-size: 14px;
         margin-right: 10px;
     }
-
     #content_header .nav li {
         padding: 10px;
     }
-
     .contact span {
         display: none;
     }
-
     #header #content_header .search-icon a {
         top: 20px;
         right: 118px;
         /* font-size: 14px; */
     }
-
     #header #content_header .search-icon input {
         opacity: 1;
         right: 2px;
         width: 161px;
         box-sizing: border-box;
-
-        padding: 14px 0 14px 52px;
+        
+    padding: 14px 0 14px 52px;
 
         font-size: 11px;
     }
-
     .contact .loginBtn {
         font-size: 14px;
     }
-
-    /* Footer */
+/* Footer */
     .contact-insta-item {
         display: none !important;
     }
 
     #footer {
-        height: 0;
-        padding: 130px 0;
+        height: auto; 
+        padding: 20px 0;
         font-size: 14px;
     }
 
@@ -751,11 +772,106 @@ form {
         height: auto;
         width: 240px;
         margin: 0;
-    }
-
+    }   
     #footer>.contact-popular li {
         margin: 0;
     }
 
+    
+}
+/* toggle class */
+.transform_180 {
+    transform:  rotate(180deg);
+    
+}
+.active {
+    transform: translateX(-100%);
+}
 
+@media screen and (max-width: 800px) {
+    #content_header>.nav {
+        display: none;
+    }
+    #nav-icon {
+        display: block;
+        padding: 0 30px;
+        transition: all 0.5s ease;
+    }
+    #nav-icon a {
+        display: block;
+    }
+    #nav-bar a:hover {
+        background-color: #f1f1f1a8;
+        color: #00c961;
+    }
+    #nav-bar {
+        display: block;
+        position: absolute;
+        top: 84px;
+        height: 1000vh;
+        background-color: #fffffffa;
+        transition: all 0.5s ease;
+    }
+    #nav-bar .sub_nav {
+        display: none;
+    }
+    #nav-bar li:nth-child(4):hover .sub_nav {
+        display: block;
+        -webkit-transition: all 400ms ease;
+        -moz-transition: all 400ms ease;
+        -ms-transition: all 400ms ease;
+        -o-transition: all 400ms ease;
+        transition: all 400ms ease;
+    }
+
+    #nav-bar li a {
+        display: block;
+        color: rgba(0, 0, 0);
+        padding: 16px 55px;
+    }
+    #header .search-icon {
+        display: none;
+    }
+    #header>#content_header {
+        justify-content: space-between;
+    }
+    .contact .loginBtn {
+        margin-right: 20px;
+    }
+    #header li.search-icon {
+        display: block;
+    }
+    #header #content_header .search-icon input {
+        top: 272px; 
+        right: 18px;
+    }
+    #header #content_header .search-icon a {
+        top: 272px; 
+        right: 134px;
+    }
+    
+}
+/* footer */
+@media screen and (max-width: 800px) {
+    #footer {
+        flex-direction: column;
+    }
+    #footer>.contact-img img{
+        height:150px !important;
+        object-fit: cover;
+    }
+    #footer>.contact-popular {
+        display: none;
+    }
+    #footer>.contact-item {
+        text-align: center;
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 361px)  {
+    #nav-icon {
+        padding: 15px;
+    }
+    
 }
