--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -785,7 +785,7 @@ body::-webkit-scrollbar-thumb {
     
 }
 .active {
-    transform: translateX(-120%);
+    transform: translateX(0);
 }
 
 @media screen and (max-width: 800px) {
@@ -811,6 +811,7 @@ body::-webkit-scrollbar-thumb {
         box-shadow: 0px 2px 4px 1px rgb(0 0 0 / 14%);
         height: 1000vh;
         background-color: #fffffffa;
+        transform: translateX(-120%);
         transition: all 0.5s ease;
     }
     #nav-bar .sub_nav {
