--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -785,7 +785,7 @@ body::-webkit-scrollbar-thumb {
     
 }
 .active {
-    transform: translateX(0);
+    transform: translateX(0) !important;
 }
 
 @media screen and (max-width: 800px) {
