--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -666,11 +666,10 @@ a{
 }
 
 /* Style phan cuoi */
-
+/* 
 .lastest-content {
-    margin: 110px 0;
 }
-
+ */
 .lastest-content .container {
     width: 1134px;
 }
