--- a/assets/css/aboutcss.css
+++ b/assets/css/aboutcss.css
@@ -225,7 +225,7 @@
 }
 
 .out-story-container .counter {
-    margin-top: 10px;
+    /* margin-top: 10px; */
     display: flex;
     justify-content: space-around;
 }
@@ -563,16 +563,17 @@
         font-size: 14px;
     }
     .out-story-container .container-img img {
-        width: 48%;
+        width: 47%;
         height: 200px;
+        margin-bottom: 12px;
         
     }
     .out-story-container .container-img {
         width: 100%;
-        height: 200px;
+        /* height: 200px; */
     }
-    .out-story-container .container-img .img1 {
-        margin-right:5px;
+    .out-story-container .container-img .img3 {
+        object-position: 50% 23%;
     }
     .out-story-container .counter h3 {
         font-size:40px;
@@ -583,6 +584,9 @@
 }
 
 @media screen and (max-width: 573px) {
+    .out-story-container .container-img img {
+        width: 46%;
+    }
     .banner .title h1 {
         font-size:56px;
     }
